[package]
name = "rdx"
version = "0.1.0"
edition = "2021"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }

[dependencies]
log = "0.4.14"
simple_logger = "1.13.0"

winit = "0.25.0"

erupt = "0.19.0"
gpu-alloc = "0.5.2"
gpu-alloc-erupt = "0.5.0"

parking_lot = "0.11.2"

glam = { version = "0.19.0" }
mint = "0.5.8"

memoffset = "0.6.4"
bytemuck = "1.7.2"
crevice = { version = "0.8.0", features = ["glam"] }

egui = "0.15.0"
egui-winit = "0.15.0"

hecs = "0.7.1"
hecs-hierarchy = "0.7.2"

puffin = "0.12.1"
puffin_egui = "0.11.0"

image = "0.23.14"

rand = "0.8.4"
rayon = "1.5.1"

bracket-noise = "0.8.2"