[package]
name = "rdx"
version = "0.1.0"
edition = "2021"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }

[dependencies]
log = "0.4.16"
simple_logger = "2.1.0"

winit = "0.26.1"

erupt = "0.22.0"
erupt-bootstrap = "0.2.3"
gpu-alloc = "0.5.3"
gpu-alloc-erupt = "0.7.0"

parking_lot = "0.12.0"

glam = { version = "0.19.0" }
mint = "0.5.8"

memoffset = "0.6.4"
bytemuck = "1.7.2"
crevice = { version = "0.8.0", features = ["glam"] }

egui = "0.17.0"
egui-winit = "0.17.0"

hecs = "0.7.6"
hecs-hierarchy = "0.7.2"

puffin = "0.13.1"
puffin_egui = "0.13.0"

image = "0.24.1"

rand = "0.8.5"
rayon = "1.5.1"

bracket-noise = "0.8.2"

serde = { version = "1.0" , features = ["derive"]}
serde_json = "1.0"
