[package]
name = "rdx"
version = "0.1.0"
edition = "2021"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }

[dependencies]
log = "0.4.16"
simple_logger = "2.1.0"

winit = "0.26.1"

erupt = "0.22.0"
erupt-bootstrap = "0.2.3"
gpu-alloc = "0.5.3"
gpu-alloc-erupt = "0.7.0"

parking_lot = "0.12.0"

glam = { version = "0.19.0" }
mint = "0.5.9"

memoffset = "0.6.4"
bytemuck = "1.7.2"
crevice = { version = "0.8.0", features = ["glam"] }

egui = "0.17.0"
egui-winit = "0.17.0"

puffin = {git = "https://github.com/EmbarkStudios/puffin"}
puffin_egui = {git = "https://github.com/EmbarkStudios/puffin"}
image = "0.24.1"

rand = "0.8.5"
rayon = "1.5.1"

bracket-noise = "0.8.2"

serde = { version = "1.0" , features = ["derive"]}
serde_json = "1.0"

downcast-rs = "1.2.0"
strum = "0.24"
strum_macros = "0.24"

bevy_ecs = "0.7.0"